# backend/models/document.go
@@ -8,7 +8,7 @@ type Document struct {
 	File              File      `gorm:"foreignKey:FileID;references:ID;constraint:OnDelete:CASCADE"`
 	FileID            string    `json:"id" gorm:"column:id;primaryKey"`
 	Category          string    `json:"category"`
-	ReportType        string    `json:"report_type"`
+	ReportName        string    `json:"report_name"`
 	Tags              string    `json:"tags"` // JSON string
 	Status            string    `json:"status"`
 	ReportDate        time.Time `json:"report_date"`
@@ -24,6 +24,6 @@ type CalendarRequest struct {
 
 type UpdateDocumentRequest struct {
 	Category   *string `form:"category"`
-	ReportType *string `form:"report_type"`
+	ReportName *string `form:"report_name"`
 	Tags       *string `form:"tags"`
 }
